week-4/tribute-page-dt-368/styles.css
body {
  text-align: center;
}

h1 {
  font-size: 130px;
}

h2 {
  font-size: 24px;
  color: #ffffff;
}

h3 {
  text-align: center;
  font-family: Gloock, serif;
  font-weight: 400;
  font-style: normal;
}

header, h1, h2 {
  font-family: "GFS Didot", serif;
  font-weight: 400;
  font-style: normal;
}

header {
  text-align: center;
  color: #ffffff;
}

.gloock-regular {
  font-family: "Gloock", serif;
  font-weight: 400;
  font-style: normal;
}

.gfs-didot-regular {
  font-family: "GFS Didot", serif;
  font-weight: 400;
  font-style: normal;
}

dt {
font-family: "Gloock", serif;
font-weight: 700;
font-style: normal;
  font-size: 16px;
  color: #000000;
}

dd {
  font-family: "GFS Didot", serif;
  font-weight: 400;
  font-style: normal;
  font-size: 16px;
  color: #000000;
  margin: 0;
}
#img1 {
  width: 365px;
  height: 584px;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 20px;
}

#dior-logo {
  position: sticky;
  text-align: right;
  top: 16px;
  right: 16px;
  z-index: 1000;
  width: 360px;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px;
}

#dior-logo-left {
  position: sticky;
  text-align: left;
  top: 0px;
  left: 1100px;
  z-index: 1000;
  width: 360px;
  height: auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0px;
}

figure{
  margin: 0;
  padding: 20px;
  background-color: #ffffff;
  background-size: contain;
}

figcaption {
  color: #ffffff;
}

body {
  background-image: url("images/lace.JPG");
  background-size: cover;
  background-repeat: repeat;
  background-position: center;
}

.black-box {
  display: flex;
  align-items: center;
  justify-content: center;
  width: auto;
  height: 196px; 
  line-height: 80px;
  background-color: #000000;
  border: 0px solid #000000;
  padding: 0px;
  margin: 0px; 
}

.black-box2 {
  display: flex;
  align-items: center;
  justify-content: center;
  width: auto; 
  height: 80px; 
  line-height: 80px;
  background-color: #000000;
  border: 0px solid #000000;
  padding: 0px;
  margin-bottom: 0px;
  color: #ffffff;
}

#small-black-box {
  width: 597px;
  height: 80px; 
  background-color: #000000;
  border: 2px solid #000000;
  padding: 10px;
  margin: 10px auto; 
  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
}

.white-box {
  width: 597px;
  height: auto; 
  background-color: #ffffff;
  border: 2px solid #ffffff;
  padding: 10px;
  margin: 10px auto; 
  opacity: .95;
  text-align: left;
}
  
.white-box-quote {
  width: 597px;
  height: auto; 
  background-color: #ffffff;
  border: 2px solid #ffffff;
  padding: 10px;
  margin: 118px auto;
  margin-bottom: 19px;
  opacity: .95;
  text-align: center;
  line-height: 2.5;
  font-family: Gloock, serif;
  font-weight: 400;
  font-style: normal;
}

#last-white-box {
  width:597px;
  height: auto;
  background-color: #ffffff;
  border: 2px solid #ffffff;
  padding: 10px;
  margin: 19px auto;
  opacity: .95;
}

.link {
  color: #D97A99;
}

